# musicapp

./: .gitignore  README.md  index.html  main.js  package.json
v5/: CMakeLists.txt  LICENSE  README.md  deploy_windows.ps1
v5/include/audio/: AudioEngine.h  DrumSample.h  Scheduler.h  Synthesizer.h
v5/include/ui/: InstrumentEditor.h  MainWindow.h  PianoRollWidget.h
v5/include/utils/: AudioBuffer.h
v5/src/: main.cpp
v5/src/audio/: AudioEngine.cpp  DrumSample.cpp  Scheduler.cpp  Synthesizer.cpp
v5/src/core/: Project.cpp
v5/src/ui/: InstrumentEditor.cpp  MainWindow.cpp  PianoKeyboard.cpp  PianoRollWidget.cpp  TransportWidget.cpp
v5/src/utils/: AudioBuffer.cpp
浏览器音乐编辑器/: README.md  preload.js
浏览器音乐编辑器/v5/: CMakeLists.txt  build_windows.bat  run_and_screenshot.sh
浏览器音乐编辑器/v5/include/audio/: DrumSample.h  Scheduler.h  WavExporter.h
浏览器音乐编辑器/v5/include/core/: Note.h  Project.h  Track.h
浏览器音乐编辑器/v5/include/ui/: InstrumentEditor.h  MainWindow.h  MixerWidget.h  PianoKeyboard.h  PianoRollWidget.h  StepSequencerWidget.h  TransportWidget.h
浏览器音乐编辑器/v5/src/: main.cpp
浏览器音乐编辑器/v5/src/audio/: AudioEngine.cpp  DrumSample.cpp  WavExporter.cpp
浏览器音乐编辑器/v5/src/ui/: InstrumentEditor.cpp  MainWindow.cpp  MixerWidget.cpp  PianoRollWidget.cpp  StepSequencerWidget.cpp
